syntax = "proto3";

package airspecs.firmware.config;

import "nanopb.proto";

message Spectrometer {
    uint32 gain = 1 [(nanopb).int_size = IS_8];
    uint32 integration_time = 2 [(nanopb).int_size = IS_8];
    uint32 integration_step = 3 [(nanopb).int_size = IS_16];
    uint32 sample_period = 4 [(nanopb).int_size = IS_16];
}
