syntax = "proto3";

package airspecs.firmware.sensor;

import "nanopb.proto";

message Spectrometer {
    uint32 band_415     = 1     [(nanopb).int_size = IS_16];
    uint32 band_445     = 2     [(nanopb).int_size = IS_16];
    uint32 band_480     = 3     [(nanopb).int_size = IS_16];
    uint32 band_515     = 4     [(nanopb).int_size = IS_16];
    uint32 band_clear_1 = 5     [(nanopb).int_size = IS_16];
    uint32 band_nir_1   = 6     [(nanopb).int_size = IS_16];
    uint32 band_555     = 7     [(nanopb).int_size = IS_16];
    uint32 band_590     = 8     [(nanopb).int_size = IS_16];
    uint32 band_630     = 9     [(nanopb).int_size = IS_16];
    uint32 band_680     = 10    [(nanopb).int_size = IS_16];
    uint32 band_clear_2 = 11    [(nanopb).int_size = IS_16];
    uint32 band_nir_2   = 12    [(nanopb).int_size = IS_16];
    optional uint32 flicker      = 13    [(nanopb).int_size = IS_16];
}
